# plink_test

./: .env.base  .gitignore  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
backend/: backend.dockerfile
backend/src/: .coveragerc  manage.py  mypy.ini  pyproject.toml  pytest.ini
backend/src/app/: asgi.py  conftest.py  wsgi.py
backend/src/app/api/: urls.py
backend/src/app/api/api_v1/: renderers.py  urls.py  views.py
backend/src/app/api/api_v1/tests/: conftest.py  mixins.py  test_views.py
backend/src/app/authentication/: factories.py  helpers.py  models.py  serializers.py  urls.py  views.py
backend/src/app/authentication/migrations/: 0001_initial.py  0002_alter_signuprequest_id.py
backend/src/app/authentication/tests/: test_views.py
backend/src/app/notes/: factories.py  models.py  serializers.py
backend/src/app/system/: helpers.py  models.py  urls.py
backend/src/app/system/settings/: base.py  build.py  exceptions.py  utils.py
backend/src/scripts/: format.sh  lint.sh  runserver.sh  test.sh
